log
Mon 06 May 2024 06:50:37 PM UTC: 
 tests:  1|8
total_score: 0/70
a53ff94
Mon 06 May 2024 06:55:07 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
df81dc0
Mon 06 May 2024 07:05:45 PM UTC: 
 treemap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  5|7
total_score: 5/70
21de78c
Mon 06 May 2024 07:06:51 PM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|7
total_score: 5/70
f9616fd
Mon 06 May 2024 07:08:58 PM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  11|6
total_score: 15/70
2f881f1
Mon 06 May 2024 07:10:35 PM UTC: 
 treemap.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  11|6
total_score: 15/70
cb1214a
Mon 06 May 2024 07:16:59 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
fd9da0b
Mon 06 May 2024 07:19:11 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
0c4683d
Mon 06 May 2024 07:19:35 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 15/70
e4ddfb0
Mon 06 May 2024 07:27:48 PM UTC: 
 treemap.c | 20 +++++++++++++++++---
 1 file changed, 17 insertions(+), 3 deletions(-)
 tests:  13|5
total_score: 15/70
89536c5
Mon 06 May 2024 07:30:33 PM UTC: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  12|5
total_score: 15/70
c6a3e85
Mon 06 May 2024 07:31:45 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  12|5
total_score: 15/70
d14ae66
Mon 06 May 2024 07:34:45 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  12|5
total_score: 15/70
5120a79
Mon 06 May 2024 07:35:31 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|5
total_score: 15/70
1c5b4ad
Mon 06 May 2024 07:35:44 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 15/70
cde1d3e
Mon 06 May 2024 07:36:41 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  12|5
total_score: 15/70
ed80e74
Mon 06 May 2024 07:38:42 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|5
total_score: 15/70
669ab8d
Mon 06 May 2024 07:39:03 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
db24178
Tue 07 May 2024 12:06:56 AM UTC: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  13|5
total_score: 15/70
3f27a73
Tue 07 May 2024 12:07:40 AM UTC: 
 treemap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  12|5
total_score: 15/70
659c982
Tue 07 May 2024 12:08:21 AM UTC: 
 treemap.c | 15 +++++++++------
 1 file changed, 9 insertions(+), 6 deletions(-)
 tests:  12|5
total_score: 15/70
1c4722c
Tue 07 May 2024 12:09:40 AM UTC: 
 treemap.c | 18 +++++++++++-------
 1 file changed, 11 insertions(+), 7 deletions(-)
 tests:  12|5
total_score: 15/70
3d80a18
Tue 07 May 2024 12:10:48 AM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  13|5
total_score: 15/70
7361894
Tue 07 May 2024 12:11:02 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  12|5
total_score: 15/70
29e61a0
Tue 07 May 2024 12:16:11 AM UTC: 
 treemap.c | 30 ++++++++----------------------
 1 file changed, 8 insertions(+), 22 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:58:29: error: ‘keyAux’ undeclared (first use in this function)
   58 |         if(tree->lower_than(keyAux, key))
      |                             ^~~~~~
treemap.c:58:29: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
430ab73
Tue 07 May 2024 12:16:19 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:55:32: error: ‘keyTemp’ undeclared (first use in this function)
   55 |         if(is_equal(tree, key, keyTemp))
      |                                ^~~~~~~
treemap.c:55:32: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
cd57628
Tue 07 May 2024 12:16:25 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|5
total_score: 15/70
ad217fe
Tue 07 May 2024 12:17:44 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c260c83
Tue 07 May 2024 12:17:58 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:64:15: error: unused variable ‘node’ [-Werror=unused-variable]
   64 |     TreeNode *node = createTreeNode(key, value);
      |               ^~~~
cc1: all warnings being treated as errors
Compilation failed
07f886d
Tue 07 May 2024 12:18:05 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 15/70
4bc0e5a
Tue 07 May 2024 12:18:27 AM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  13|5
total_score: 15/70
e23ba96
Tue 07 May 2024 12:19:19 AM UTC: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  13|5
total_score: 15/70
58c8708
Tue 07 May 2024 12:21:12 AM UTC: 
 treemap.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
 tests:  12|5
total_score: 15/70
e0f2521
Tue 07 May 2024 12:21:33 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  12|5
total_score: 15/70
bff1a0d
Tue 07 May 2024 12:21:44 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 15/70
bfbc456
Tue 07 May 2024 12:26:11 AM UTC: 
 treemap.c | 27 +++++++++++++++------------
 1 file changed, 15 insertions(+), 12 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:60:20: error: ‘hjjo’ undeclared (first use in this function); did you mean ‘hijo’?
   60 |             hijo = hjjo->right;
      |                    ^~~~
      |                    hijo
treemap.c:60:20: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
61d8660
Tue 07 May 2024 12:26:18 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
70a4ae4
Tue 07 May 2024 12:32:44 AM UTC: 
 treemap.c | 36 ++++++++++++++++++------------------
 1 file changed, 18 insertions(+), 18 deletions(-)
 tests:  13|5
total_score: 15/70
c92ebb9
Tue 07 May 2024 12:33:38 AM UTC: 
 treemap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  14|5
total_score: 15/70
44004b6
Tue 07 May 2024 12:38:31 AM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  14|5
total_score: 15/70
06c6264
Tue 07 May 2024 12:39:12 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  14|5
total_score: 15/70
62f8f15
